--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -67,7 +67,8 @@ also find that long-run causality goes unidirectionally from houses’ own inter
 as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
 while the other way round does not occur.
 	
-#+LATEX: \noindent \textbf{Keywords:}
+#+LATEX: \noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model
+#+LATEX: \noindent \textbf{JEL cods:} E39; E44; R39
 #+END_abstract
 
 
@@ -83,7 +84,7 @@ while the other way round does not occur.
 * Residential investment, economic growth and business cycle in the US economy
 #+LATEX: \label{sec:Stylized_Facts}
 #+INCLUDE: "Stylized_Facts.org"
-* Review of the Macroeconometric Literature
+* Determinants of residential investment: review of empirical literature
 #+LATEX: \label{sec:empirical_review}
 #+INCLUDE: "Empirical_Review.org"
 
