--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-02-15 seg 18:27
+% Created 2021-03-10 qua 18:12
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -59,12 +59,13 @@ also find that long-run causality goes unidirectionally from houses’ own inter
 as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
 while the other way round does not occur.
 
-\noindent \textbf{Keywords:}
+\noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model
+\noindent \textbf{JEL cods:} E39; E44; R39
 \end{abstract}
 
 
 \section{Introduction}
-\label{sec:orga30c694}
+\label{sec:org524c5e2}
 \label{sec:Introduction}
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
@@ -82,18 +83,16 @@ The results for all statistical tests are provided in Appendix \ref{appen:A}.
 
 
 \section{Residential investment, economic growth and business cycle in the US economy}
-\label{sec:orge9e9cce}
+\label{sec:org3770e2f}
 \label{sec:Stylized_Facts}
-Traditionally, economists do not pay attention to the role of residential investment to macroeconomic dynamics.
-There are, nevertheless, two notable exceptions.
-In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
+Before the subprime crisis and the subsequent Great Recession (2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
+Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure \ref{fig:share}).
+The subprime crisis and the Great Recession of the US economy had changed the landscape, making clear the macroeconomic role of housing prices and finance, and residential investment.
+Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
+
+There are, nevertheless, two notable exceptions. In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
 The other exception is \textcite{duesenberry_investment_1958} who presents a critique of ordinary theories of aggregate investment because they put together firms’ investment in capital and structures and investment in residential housing.
 In this sense, he builds a model dedicated for the latter type of investment, emphasizing the role of house prices.
-
-Perhaps, the small share of residential investment on aggregate demand may explain this lack of attention (see figure \ref{fig:share}).
-The subprime crisis and the Great Recession of the US economy had changed the landscape, making clear the macroeconomic role of
-housing prices and finance, and residential investment.
-Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 
 
 \begin{figure}[H]
@@ -139,6 +138,7 @@ The Great Recession is a remarkable example of this pattern while dot-com crisis
 	\caption*{\textbf{Source:} Authors' Elaboration}
 \end{figure}
 
+
 In a heterodox perspective, \textcites{fiebiger_semi-autonomous_2018}{fiebiger_trend_2017} present residential investment as a Luxemburg-type external market providing a source of autonomous demand to absorb economic surplus.
 Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
 Figure \ref{fig:trend} presents the trend of GDP and residential investment growth rate by estimating a HP filter.
@@ -160,17 +160,10 @@ As a consequence, banking activities were redirected towards granting credit maj
 Other studies have shown that real estate inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability \cites{ryoo_household_2015}{stockhammer_debt-driven_2016}{barnes_private_2016}{johnston_global_2017}{mian_household_2017}{anderson_politics_2020}{fuller_housing_2020}. 
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with determinants of the latter.
-\section{Review of the Macroeconometric Literature}
-\label{sec:orgae53656}
+\section{Determinants of residential investment: review of empirical literature}
+\label{sec:orge13e10e}
 \label{sec:empirical_review}
-\subsection{Ausência de trabalhos que analizam investimento residencial de um ponto de vista macroeconômico}
-\label{sec:org279f055}
-As we have seen in the previous session, there have been a growing attention to the macroeconomic implications of housing.
-However, most of this literature treat housing-related variables in a microeconomic and regional fashion.
-According to \textcite{arestis_u.s._2008}, the US housing market in particular is quite heterogeneous.
-As a consequence, most econometric papers do not analyze residential investment in macroeconomic terms, restricting it to regional and metropolitan issues \cite{arestis_u.s._2008}.
-Additionally, if the housing macroeconomic literature is scarce, even fewer scholars examinate residential investment specifically.
-Most of them emphasize house prices consequences and not its volume implications \cites{arestis_residential_2015}{perez_Montiel_2021}.
+As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this sense, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
 
 In this sense, \citeauthor*{poterba_tax_1984}'s \citeyear{poterba_tax_1984} contribution stands out once it considers houses as an asset and not only as a durable consumption good.
 Based on asset-market model for the construction sector, he estimates a residential investment supply function for the US from 1974 to 1982.
@@ -204,32 +197,21 @@ They conclude that the magnitude of the response to shock is similar to before t
 In order to do so, they estimate a VECM between monetary aggregates (M2), GDP, residential investment and alternate between short-term government bonds and long-term mortgage interest rates.
 They report an increasing contribution of long-term mortgages interest rate over resident investment variance after those institutional changes mentioned above.
 
-Figure \ref{Fig:CreditFDICIA} illustrates the relevance of institutional reforms due to the savings and loans crisis throughout the 80's and early 90's.
-This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households.
-As a consequence, real estate finance has increased considerably in the following periods.
-
-
-\begin{figure}[htb]
-	\centering
-	\caption{Mortgage and Consumer credit growth rate (1979-2019)}
-	\label{Fig:CreditFDICIA}
-	\includegraphics[width=\textwidth]{./figs/FDICIA.eps}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
-\end{figure}
 
 Table \ref{tab:summary_model} presents an overview of the discussed topics and its main conclusions.
 From this brief review of the literature, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy)\footnote{For a broader review of econometric literature, see \textcite{egebo_1990_MODEL}.}.
 Some authors deflate the rate of interest by the CPI, others use nominal interest rate to capture the effect of monetary illusion.
-In the next section, we will present a particular way of combining the two variables in a single index that we will use on our econometric estimation.
+In the next section, we will present a particular way of combining house prices and mortgage rate of interest in a single index that we will use on our econometric estimation.
+
 
 
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:org8195bd7}
+\label{sec:org9f87bd5}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US	Economy}
-\label{sec:orgaa41483}
+\label{sec:org183e022}
 \label{sc:own}
 
 
@@ -252,10 +234,6 @@ As discussed before, this housing boom was possible because of some changes of h
 	\includegraphics[width=.9\textwidth]{./figs/Houses_Mortgages.png}
 	\caption*{\textbf{Source:} Board of Governors of the Federal Reserve System (US), Authors' Elaboration}
 \end{figure}
-
-
-\subsubsection{Descrição teórica da taxa própria}
-\label{sec:org4c21b33}
 Next, we describe the relationship between residential investment growth rate (\(g_{I_h}\)) and houses' own interest rate (\(own\)) as proposed by \textcite{teixeira_crescimento_2015}.
 Next, we will present the hypothesis to be tested on the Section \ref{sec:estimation}. To obtain this relationship, we deflate mortgage interest rate (\(r_{mo}\)) by real estate inflation (\(\pi\)) as follows:
 
@@ -282,11 +260,11 @@ g_{I_{h_{t}}} = \phi_0 - \phi_1\cdot own_t
 therefore, if these time-series are co-integrated, we specify the short-run adjustment process through the following VECM:
 \begin{equation}
 \begin{cases}
-\Delta own_t = \delta_{1} + \alpha_1\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + {\sum^{N=4}_{i=1}}\beta_{1,i}\cdot \Delta g_{I_{h_{t-i}}} +
-\sum^{N=4}_{i=1}\gamma_{1,i}\cdot \Delta own_{t-i} +\varepsilon_{t,1}
+\Delta own_t = \delta_{1} + \alpha_1\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + {\sum^{N}_{i=1}}\beta_{1,i}\cdot \Delta g_{I_{h_{t-i}}} +
+\sum^{N}_{i=1}\gamma_{1,i}\cdot \Delta own_{t-i} +\varepsilon_{t,1}
 \\
-\Delta g_{Z_{t}} = \delta_{2} + \alpha_2\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + \sum^{N=4}_{i=1}\beta_{2,i}\cdot \Delta g_{I_{h_{t-i}}} +
-\sum^{N=4}_{i=1}\gamma_{2,i}\cdot \Delta own_{t-i} +\varepsilon_{t,2}
+\Delta g_{I_{h_{t}}} = \delta_{2} + \alpha_2\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + \sum^{N}_{i=1}\beta_{2,i}\cdot \Delta g_{I_{h_{t-i}}} +
+\sum^{N}_{i=1}\gamma_{2,i}\cdot \Delta own_{t-i} +\varepsilon_{t,2}
 \end{cases}
 \end{equation}
 
@@ -295,10 +273,22 @@ where \(\delta_s\) indicate linear trend (level);
 \(\beta_s\) and \(\gamma_s\) are coefficients associated with lagged \(g_{I_h}\) and \(own\) respectively and; \(\varepsilon_s\) are the residuals.
 Based on \textcite{teixeira_crescimento_2015}, we depict the expected results in Table \ref{resultados_esperados} below:
 
+Figure \ref{Fig:CreditFDICIA} illustrates the relevance of institutional reforms due to the savings and loans crisis throughout the 80's and early 90's.
+This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households.
+As a consequence, real estate finance has increased considerably in the following periods.
+
+
+\begin{figure}[htb]
+	\centering
+	\caption{Mortgage and Consumer credit growth rate (1979-2019)}
+	\label{Fig:CreditFDICIA}
+	\includegraphics[width=\textwidth]{./figs/FDICIA.png}
+	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
+\end{figure}
 \input{./tabs/hypothesis.tex}
 
 \subsection{Data and estimation strategy}
-\label{sec:org9f2318c}
+\label{sec:org9162229}
 \label{sec:estimation}
 
 
@@ -379,7 +369,7 @@ On the following subsection, we analyze the results and compare with the theoret
 
 
 \subsection{Estimation results}
-\label{sec:org9766857}
+\label{sec:org55c0725}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
@@ -406,7 +396,7 @@ Therefore, houses' own interest rate is explained mainly by itself and explains 
 	\centering
 	\caption{Forecast error variance decomposition (FEVD)}
 	\label{fevd}
-	\includegraphics[height=.4\textheight]{./figs/FEVD_VECMpython_TxPropria.png}
+	\includegraphics[width=.9\textwidth]{./figs/FEVD_VECMpython_TxPropria.png}
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{figure}
 
@@ -424,7 +414,7 @@ In short, our results shows that an increase in mortgage interest rate (equivale
 \end{figure}
 
 \subsection{Comparison with previous studies}
-\label{sec:org8eb15b6}
+\label{sec:orgf502b0a}
 
 In this section,  we contrast our findings with those obtained by the literature.
 At this stage, we restrict the comparison with  \textcite{gauger_residential_2003} and \textcite{arestis_residential_2015} since we share the same topic.
@@ -437,7 +427,7 @@ Thus, we conclude that our estimation depicts residential investment growth rate
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org2d18616}
+\label{sec:org3d696b6}
 \label{sec:Conclusion}
 In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
 To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
@@ -464,22 +454,22 @@ Thus, our  proposal differs from the usual empirical literature by:
 
 
 \section*{Acknowledgments}
-\label{sec:org2e87063}
+\label{sec:org0ca90a3}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:org74cd754}
+\label{sec:org4373a36}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:org38d4719}
+\label{sec:org6a4a0f7}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:orgc536cc7}
+\label{sec:orgaa61a4d}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
