--- a/Writings/Ideas.org
+++ b/Writings/Ideas.org
@@ -125,3 +125,8 @@ Mort_{i} = \sum_{i=1991}^{T = 2014} \frac{(Mort_{i,t} - \overbrace{Mort_{t}})}{T
 - Adicionar cor de LME e CME ao diagrama de commoditização
 - *Memo:* Estimar um QCA com mortgaging e outro com commoditização
 - Estimar um QCA final em que LMF e CMF (variedades de capitalismo residencial) vs Variáveis comuns os anteriores
+* <2021-03-10 qua> Novas variáveis considerando 2SQCA
+
+- Tipo de taxa de juros de acordo com o percetual no total (próxima)
+- LTV típico
+  + Se for 2SQCA, parece ser mais adequado do que a diferença com o LTV máximo (próximo - remoto)
